# cmake_project

./: CMakeLists.txt  README.md
3rd/: CMakeLists.txt
3rd/m_info/: CMakeLists.txt
3rd/m_info/include/: m_info.h
3rd/m_info/lib/: m_info.exp  m_info.lib
3rd/m_info/src/: m_info.cpp
3rd/m_math/: CMakeLists.txt
3rd/m_math/include/: m_math.h
3rd/m_math/lib/: m_math.exp  m_math.lib
3rd/m_math/src/: m_math.cpp
cmake/: FindM_INFO.cmake  FindM_MATH.cmake  utils.cmake
include/moduleA/: moduleA.h
include/moduleA/subModuleA/: subModuleA.h
scripts/: movelib_win_x64d.sh
src/: CMakeLists.txt  main.cpp
src/moduleA/: moduleA.cpp
src/moduleA/subModuleA/: subModuleA.cpp
